[package]
name = "kand"
version = "0.2.2"
edition = "2024"
authors = ["CtrlX <gitctrlx@gmail.com>"]
readme = "../README.md"
description = "Kand: A Modern, High-Performance Technical Analysis Library."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rust-ta/kand"
documentation = "https://docs.rs/kand"
keywords = ["technical-analysis", "finance", "rust", "talib", "indicators"]
categories = ["finance", "algorithms", "data-structures", "science", "mathematics"]

[dependencies]
num_enum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
csv = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "bench_main"
harness = false

[features]
default = ["f64", "i64"]     # Default: extended precision with basic checks
f32 = []                              # 32-bit floating point
f64 = []                              # 64-bit floating point
i32 = []                              # 32-bit integer
i64 = []                              # 64-bit integer
check = []                            # Basic validation checks
check-nan = []                        # Check for NaN values in input data
allow-nan = []                        # Allow NaN values in output data
